--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,16 @@
 {
     "rewrites":  [
       {"source": "/(.*)", "destination": "/"}
+    ],
+    "routes": [
+      { "src": "/", "dest": "/" },
+      { "src": "/events", "dest": "/" },
+      { "src": "/participants", "dest": "/" },
+      { "src": "/create-event", "dest": "/" },
+      { "src": "/register-attendee", "dest": "/" },
+      { "src": "/update-event", "dest": "/" },
+      { "src": "/update-attendee", "dest": "/" },
+      { "src": "/delete-event", "dest": "/" },
+      { "src": "/delete-attendee", "dest": "/" }   
     ]
 }
